--- a/src/stylesheets/theme.less
+++ b/src/stylesheets/theme.less
@@ -345,14 +345,11 @@ gui-iframe {
 gui-toolbar,
 gui-button-bar {
   margin : 4px;
+  margin : 0;
 }
 gui-toolbar > *,
 gui-button-bar > * {
-  margin-right : 4px;
-}
-gui-toolbar > *:last-child,
-gui-button-bar > *:last-child {
-  margin-right : 0;
+  margin : 4px;
 }
 
 /* Tabs */
